# nano-llama.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt
nanollama/: common.h  config.h  nanollama.h
nanollama/engine/: engine.cpp  engine.h  kv_cache.cpp  kv_cache.h  llm.cpp  llm.h  model_runner.cpp  model_runner.h  recurrent_cache.cpp  recurrent_cache.h  thread_pool.cpp  thread_pool.h
nanollama/layers/: attention.cpp  attention.h  ops.h  sampler.cpp  sampler.h
nanollama/models/: model.cpp  model.h  qwen3.cpp  qwen3.h  qwen35.cpp  qwen35.h  qwen35_graph.cpp
nanollama/tokenizer/: chat.cpp  chat.h  vocab.cpp  vocab.h
nanollama/utils/: gguf.cpp  gguf.h
nanollama/vision/: clip.cpp  clip.h  image.cpp  image.h  vlm.cpp  vlm.h
tools/bench/: main.cpp
tools/example/: main.cpp
tools/server/: main.cpp
